--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-PORT = 8080
-
-MONGODB_URL = mongodb+srv://johndoe:johndoe@expense-management-syst.rsbisqf.mongodb.net/expense-management-system
+MONGO_URL=mongodb+srv://johndoe:johndoe@expense-management-syst.rsbisqf.mongodb.net/?retryWrites=true&w=majority&appName=Expense-Management-System
