--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "expense-management-system",
+  "name": "Expanse-Management-System",
   "version": "1.0.0",
-  "description": "Expense Management System",
+  "description": "expanse tracker app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run client\" "
   },
-  "author": "",
+  "keywords": [],
+  "author": "Techinfoyt",
   "license": "MIT",
   "dependencies": {
     "colors": "^1.4.0",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mongodb": "^6.15.0",
-    "mongoose": "^8.13.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mongoose": "^6.6.5",
+    "morgan": "^1.10.0"
   }
 }
