update styling and minor login/register handles

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://johndoe:johndoe@expense-management-syst.rsbisqf.mongodb.net/?retryWrites=true&w=majority&appName=Expense-Management-System
+
+PORT=8080
