--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0"
-  }
+  },
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
 }
